--- a/创建网页-改进版ks/test.html
+++ b/创建网页-改进版ks/test.html
@@ -35,17 +35,17 @@
     </style>
     <script>
         window.onload = function() {
-            alert("恭喜小姨小姨丈订新房！");
+            alert("生日快乐！");
         };
     </script>
 </head>
 <body>
     <div class="container">
-        <h1>🎉搬家新居，万事顺遂🎉</h1>
-	<h1>💰财源广进，福气满满🎊</h1>
-        <p>感谢小姨的红包(´▽`ʃ♡ƪ)</p >
+        <h1>🎉生日快乐🎉</h1>
+	<h1>💰生日快乐🎊</h1>
+        <p>没了(´▽`ʃ♡ƪ)</p >
         <hr>
-        <img src="yeah.gif" alt="恭喜" width="800">
+        <img src="狗-C.jpg" alt="恭喜" width="800">
     </div>
 </body>
 </html>
